@@ -135,11 +135,16 @@ public abstract class HostServicesDelegate {
             String osName = System.getProperty("os.name");
             try {
                 if (osName.startsWith("Mac OS")) {
-                    Runtime.getRuntime().exec(
-                            "open " + uri);
+                    Runtime.getRuntime().exec(new String[] {
+                        "open",
+                        uri
+                    });
                 } else if (osName.startsWith("Windows")) {
-                    Runtime.getRuntime().exec(
-                            "rundll32 url.dll,FileProtocolHandler " + uri);
+                    Runtime.getRuntime().exec(new String[] {
+                        "rundll32",
+                        "url.dll,FileProtocolHandler",
+                        uri
+                    });
                 } else { //assume Unix or Linux
                     String browser = null;
                     for (String b : browsers) {
